--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-angular-ui-router",
+  "name": "generator-angular-closure",
   "version": "0.5.3",
   "description": "Yeoman generator for AngularJS( include UI-router )",
   "keywords": [
@@ -8,15 +8,16 @@
     "framework",
     "component",
     "front-end",
+    "closure",
     "app"
   ],
   "homepage": "https://github.com/yeoman/generator-angular",
-  "bugs": "https://github.com/iamblue/generator-angular-ui-router/issues",
-  "author": "Chrome Developer Relations",
+  "bugs": "https://github.com/m2nd/generator-angular-closure/issues",
+  "author": "m2nd",
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/iamblue/generator-angular-ui-router.git"
+    "url": "git://github.com/m2nd/generator-angular-closure.git"
   },
   "scripts": {
     "test": "mocha"
